--- a/styleGuide.html
+++ b/styleGuide.html
@@ -7,8 +7,10 @@
     <title>Style-Guide</title>
     <script src="./JavaScript/index.js"></script>
     <link rel="stylesheet" href="./CSS/nav.css">
+    <link rel="stylesheet" href="./CSS/footer.css">
 </head>
 <body>
-    
+    <h2>Style-Guide</h2>
 </body>
+<my-footer></my-footer>
 </html>
