--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./CSS/nav.css">
     <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/homepage.css">
+    <link rel="stylesheet" href="./CSS/footer.css">
     <script src="https://kit.fontawesome.com/55a8f5cf6b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -20,11 +21,14 @@
       to the dull moments.
 
 
-
+      <div class="image-container">
+        <img src="./Images/frontpage.jpg" alt="Your Image" />
+      </div>
 
 
 
 
 	</div>
 </body>
+<my-footer></my-footer>
 </html>
