--- a/netart.html
+++ b/netart.html
@@ -7,8 +7,28 @@
     <title>Internet Art</title>
     <script src="./JavaScript/index.js"></script>
     <link rel="stylesheet" href="./CSS/nav.css">
+    <link rel="stylesheet" href="./CSS/footer.css">
+    <link rel="stylesheet" href="./CSS/netart.css">
+    <script src="./JavaScript/netart.js" defer></script>
 </head>
 <body>
-    
+    <canvas id="canvas"></canvas>
+    <div class="nav">
+        <div class="clr" data-clr="#000"></div>
+        <div class="clr" data-clr="red"></div>
+        <div class="clr" data-clr="orange"></div>
+        <div class="clr" data-clr="blue"></div>
+        <div class="clr" data-clr="purple"></div>
+        <div class="clr" data-clr="yellowgreen"></div>
+        <div class="clr" data-clr="yellow"></div>
+        <div class="clr" data-clr="#fff"></div>
+        <button class="clear">Clear</button>
+        <button class="save">Save</button>
+        <input type="color" id="favcolor" value="#FFFFFF">
+        <input type="range" name="ageInputName" id="ageInputId" value="5" min="1" max="10" oninput="ageOutputId.value = ageInputId.value">
+        <output id="ageOutputId">5</output>
+        <div class="emoji">🎨</div>
+    </div>
 </body>
+<my-footer></my-footer>
 </html>
