style guide and more blogs
done style guide. added more blogs. done artwork

--- a/Blogs/blog3.html
+++ b/Blogs/blog3.html
@@ -9,10 +9,15 @@
     <link rel="stylesheet" href="../CSS/nav.css">
     <link rel="stylesheet" href="../CSS/normalize.css">
     <link rel="stylesheet" href="../CSS/mainBlog.css">
+    <link rel="stylesheet" href="../CSS/blogs.css">
     <link rel="stylesheet" href="../CSS/footer.css">
+    <script src="../JavaScript/topbutton.js"></script>
 </head>
 <body>
-    
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <a href="../Blogs/blog2.html" class="Prev">Prev</a><p class="Heading">UI/UX reflection<a href="../Blogs/blog4.html" class="next">Next</a></p>
+    <div class="writing">
+        </div>
 </body>
 <my-footer></my-footer>
 </html>
