--- a/Blogs/blogss.html
+++ b/Blogs/blogss.html
@@ -39,12 +39,23 @@
     
         <div class='card right'>
             <div class='img-cont'>
-                <span class='window'><h2>Week 5</h2></span>
+                <span class='window'><h2>Reflection</h2></span>
                 <img class="img" src="../Images/Blog3.0.jpg" alt="">
             </div>
                 <div class='content-cont'>
-                  <span class='card-header'><a href="blog3.html" >importance of accessibility</a></span>
-                <span class='card-body'> Accessibility is the ability to reach, use or enter something with ease..</span>
+                  <span class='card-header'><a href="blog3.html" >UI/UX Critical Reflection</a></span>
+                <span class='card-body'>....</span>
+            </div>
+        </div>
+
+        <div class='card right'>
+            <div class='img-cont'>
+                <span class='window'><h2>Artwork reflection</h2></span>
+                <img class="img" src="../Images/Blog3.0.jpg" alt="">
+            </div>
+                <div class='content-cont'>
+                  <span class='card-header'><a href="blog3.html" >Artwork Reflection</a></span>
+                <span class='card-body'>....</span>
             </div>
         </div>
 
