--- a/Blogs/blog4.html
+++ b/Blogs/blog4.html
@@ -17,6 +17,36 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <a href="../Blogs/blog3.html" class="Prev">Prev</a><p class="Heading">Artwork reflection</p>
     <div class="writing">
+        <p>
+            I have sat and thought long and hard about my internet artwork idea after realizing my initial idea still needs a lot of work and I did not have much time to get around doing it. 
+            This current artwork is still small scale and there are still developments to be made as I work on the website for the upcoming assignments. 
+        </p>
+        <p>
+            TThe initial idea was to have my whole website function as internet art on its own. I wanted to create a website coloring book essentially.
+             I wanted to have the user interact with the website and leave traces of color as they go along. There would have been small doodle drawings around the website which could be colored in using a color palate with a color picker. 
+             After I realized that I will be needing more time and assistance with this idea I thought I needed to come up with a different idea which still aligns with the whole coloring book idea. 
+             I then thought I could have a section dedicated to the user making their own art by drawing and coloring their drawing and saving it as a png file. I created a page with drawing tools and colors which can be saved as picture onto your laptop. 
+            This idea is still small scale and is still to be developed. 
+        </p>
+        <p>
+            Most of my research and planning is based around my first idea of making the website my web art so I created a moodboard and concept board that explains the idea I had. 
+            I still plan of doing this idea hopefully it can be implemented successfully with react in the coming assignments because I still like that idea very much and I think it could be cool to do. 
+            For the small-scale experimental internet artwork that I have currently I initially wanted to have a set drawing in the background of the canvas that the user can color in with the color of their choosing etc. 
+        </p>
+        <a href="../Images/moodboard.png" class="stylePic"><img src="../Images/moodboard.png" class="stylePic" alt="mood board"  style="width: 50%">Click Moodboard </a>
+        <a href="../Images/concept.png" class="stylePic"><img src="../Images/concept.png" class="stylePic" alt="concept board" style="width: 50%">Click concept board </a>
+        <p>
+            Here is an example of what the canvas could have looked like with a black and white set image that the user adds color to: 
+        </p>
+        <a href="../Images/canvas.png" class="stylePic"><img src="../Images/canvas.png" class="stylePic" alt="example"  style="width: 50%"></a>
+
+        <p>
+            The artwork page has some glitches that I have not been able to fix at the moment where the mouse does not draw directly where it is pointed, and this affects the drawing process. 
+            This section of the website does not have a footer because I wanted to make it look and feel like a plain white canvas like the painting app and having a footer would have been a distraction. 
+            Overall I like this idea considering it is still a small scale experimental piece which I can still develop with feedback received it could be a cool idea to fully develop and execute
+        </p>
         </div>
+        
 </body>
+<my-footer></my-footer>
 </html>
