--- a/Blogs/blog4.html
+++ b/Blogs/blog4.html
@@ -22,7 +22,7 @@
             This current artwork is still small scale and there are still developments to be made as I work on the website for the upcoming assignments. 
         </p>
         <p>
-            TThe initial idea was to have my whole website function as internet art on its own. I wanted to create a website coloring book essentially.
+            The initial idea was to have my whole website function as internet art on its own. I wanted to create a website coloring book essentially.
              I wanted to have the user interact with the website and leave traces of color as they go along. There would have been small doodle drawings around the website which could be colored in using a color palate with a color picker. 
              After I realized that I will be needing more time and assistance with this idea I thought I needed to come up with a different idea which still aligns with the whole coloring book idea. 
              I then thought I could have a section dedicated to the user making their own art by drawing and coloring their drawing and saving it as a png file. I created a page with drawing tools and colors which can be saved as picture onto your laptop. 
