--- a/Blogs/blogss.html
+++ b/Blogs/blogss.html
@@ -22,7 +22,7 @@
             </div>
                 <div class='content-cont'>
                   <span class='card-header'><a href="blog1.html">Thoughts on Net-Art</a></span>
-                <span class='card-body'>...</span>
+                <span class='card-body'>We live in a time where things are forever changing.</span>
             </div>
         </div>
     
@@ -33,7 +33,7 @@
             </div>
                 <div class='content-cont'>
                   <span class='card-header'><a href="blog2.html">Brainstorming</a></span>
-                <span class='card-body'>....</span>
+                <span class='card-body'>I liked this UI designers minimal and liquid animated website.</span>
             </div>
         </div>
     
@@ -44,7 +44,7 @@
             </div>
                 <div class='content-cont'>
                   <span class='card-header'><a href="blog3.html" >UI/UX Critical Reflection</a></span>
-                <span class='card-body'>....</span>
+                <span class='card-body'>The user interface and user experience is an important part of designing a website.</span>
             </div>
         </div>
 
@@ -55,7 +55,7 @@
             </div>
                 <div class='content-cont'>
                   <span class='card-header'><a href="blog3.html" >Artwork Reflection</a></span>
-                <span class='card-body'>....</span>
+                <span class='card-body'>The initial idea was to have my whole website function as internet art on its own.</span>
             </div>
         </div>
 
