--- a/netart.html
+++ b/netart.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="./CSS/nav.css">
     <link rel="stylesheet" href="./CSS/footer.css">
     <link rel="stylesheet" href="./CSS/netart.css">
+    <link rel="stylesheet" href="./CSS/blogs.css">
     <script src="./JavaScript/netart.js" defer></script>
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    
+    <p class="Heading">Lets make Art</p>
     <div class="nav">
         <div class="clr" data-clr="#000"></div>
         <div class="clr" data-clr="red"></div>
